src/App.css
body {
  height: 100%;
  overflow: hidden;
  width: 100%;
  position: fixed;
  /* prevent text selection */
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

#y-axis {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  height: 100vh;
  overflow-y: hidden;
}

#yo-chart {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  height: 100vh;
  width: 100vw;
  background-color: white;
  overflow-x: scroll;
  overflow-y: hidden;
}

.customized-dot {
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #8884d8;
}

.hide {
  display: none;
}

